<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/destination_application_2"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/parameter1TextView"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/parameter_1"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/parameter1ValueEditText"
        android:layout_below="@id/parameter1TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receive_parameter_1"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/parameter2TextView"
        android:layout_below="@id/parameter1ValueEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/parameter_2"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/parameter2ValueEditText"
        android:layout_below="@id/parameter2TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receive_parameter_2"
        android:textSize="20sp"
        />


</RelativeLayout>